# SpGEMM

./: .gitignore  .gitmodules  README.md
implementation/: CMakeLists.txt  download_matrices.sh
implementation/benchmark/: CMakeLists.txt  benchmark.cpp
implementation/eval/: make_plots.R
implementation/src/: common.h  csr.hpp  matrix_generator.cpp  spgemm.hpp
implementation/tests/: CMakeLists.txt  csr_tests.cpp  matrix_generator_tests.cpp  spgemm_tests.cpp
spgemm-mojo/: pixi.toml
spgemm-mojo/src/: bench.mojo  csr.mojo  matrix_generator.mojo  spgemm.mojo  test_csr.mojo  test_spgemm.mojo
